--- a/public/upload.html
+++ b/public/upload.html
@@ -9,7 +9,11 @@
     <form action="/upload-csv" method="post" enctype="multipart/form-data">
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" required><br><br>
+        <label for="rorder">loadWithoutRorder:</label>
+        <input type="checkbox" id="loadWithoutRorder" name="loadWithoutRorder" value="true">
         <label for="csvfile">CSV File:</label>
+        <!-- add a toggle for loading ones without a Rorder value -->
+    
         <input type="file" id="csvfile" name="csvfile" accept=".csv" required><br><br>
         <button type="submit">Upload</button>
     </form>
